# permute

./: .gitignore  .travis.yml  LICENSE  Makefile.am  README  configure.ac
src/: main.c  permute.c  permute.h  str_to_uint.c  str_to_uint.h
test/: depth  version_option
test/src/: test_permute.c  test_str_to_uint.c
